# EdgeDetectionApp

./: .gitignore  README.md  settings.gradle.kts  setup-web.bat
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gl_renderer.cpp  gl_renderer.h  gl_renderer_stub.cpp  native-lib.cpp  opencv_processor.cpp  opencv_processor.h  opencv_processor_stub.cpp
app/src/main/java/com/example/edgedetectionapp/: CameraFrameAnalyzer.kt  CameraGLSurfaceView.kt  GLRenderer.kt  MainActivity.kt  NativeLib.kt  ShaderRender.kt
app/src/main/res/drawable/: camera_button_background.xml  ic_camera.xml  spinner_background.xml  toggle_background.xml
app/src/main/res/layout/: activity_main_camera.xml  activity_main_old.xml  activity_main_simple.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle.kts  consumer-rules.pro
opencv/src/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
web-interface/: README.md  next.config.js  package-lock.json  package.json
web-interface/.next/: _events.json  trace
web-interface/.next/cache/webpack/client-development/: index.pack.gz.old
web-interface/.next/server/: server-reference-manifest.js  server-reference-manifest.json
web-interface/src/app/: globals.css  layout.tsx  page.tsx
web-interface/src/components/: EdgeDetectionProcessor.tsx  ImageUploader.tsx  ResultsDisplay.tsx
